--- a/styles/Post.module.scss
+++ b/styles/Post.module.scss
@@ -52,7 +52,10 @@
         margin-top: 2rem;
 
         img {
-            width: 100%;
+            max-width: 100%;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
         }
     }
 
